--- a/PP/appendix/appendix.tex
+++ b/PP/appendix/appendix.tex
@@ -3,9 +3,9 @@
 \section{Appendix} 
 
 \subsection{Hours of work}
-This is the time spent redacting the ITPD
+This is the time spent redacting the PP
 \begin{itemize}
-	\item {Lorenzo Binosi} -   hours
+	\item {Lorenzo Binosi} -   30 hours
 \end{itemize}
 
 \begin{thebibliography}{1}	
