--- a/PP/resource_allocation/resource_allocation.tex
+++ b/PP/resource_allocation/resource_allocation.tex
@@ -1,1 +1,35 @@
 \section{Resource allocation}
+
+In this section we are going to provide a possible resources allocation for the schedule defined in the previous section. Tasks and subtasks will be divided between the three member of our team, i.e., our resources, which have been introduced in Section \ref{cost-effort-est}.
+
+It's important to note that a subtask could be performed by all the members of the team because, the decisions made and the knowledge obtained at the completion of the subtask, could be essential in order to perform other subtasks.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=\textheight, keepaspectratio]{resource_allocation/diagrams/ScheduleLorenzo1.png}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=\textheight, keepaspectratio]{resource_allocation/diagrams/ScheduleLorenzo2.png}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=\textheight, keepaspectratio]{resource_allocation/diagrams/ScheduleAlice1.png}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=\textheight, keepaspectratio]{resource_allocation/diagrams/ScheduleAlice2.png}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=\textheight, keepaspectratio]{resource_allocation/diagrams/ScheduleBob1.png}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[height=\textheight, keepaspectratio]{resource_allocation/diagrams/ScheduleBob2.png}
+\end{figure}
