--- a/PP/task_and_schedule/task_and_schedule.tex
+++ b/PP/task_and_schedule/task_and_schedule.tex
@@ -1,1 +1,27 @@
 \section{Tasks and schedule}
+
+In this section we are going to provide which are the tasks and the subtasks required by the project to be completed. For the documentation, which includes RASD, DD, ITPD and PP, we will consider the deadlines given by the Software Engneering 2 course and, for all that concern the development and the post-development, we will consider the immediately following period.
+
+The final schedule is now summarized and completely described in the following figures.
+
+\begin{itemize}
+	\item RASD [04/10/2016 - 13/11/2016]
+	\item DD [14/11/2016 - 11/12/2016]
+	\item ITPD [12/12/2016 - 15/01/2017]
+	\item PP [16/01/2017 - 22/01/2017]
+	\item Documents review [23/01/2017 - 21/02/2017]
+	\item Presentation [22/01/2017]
+	\item Development [23/01/2017 - 25/08/2017]
+	\item Deployment [26/08/2017 - 10/10/2017]
+	\item Maintenance [11/10/2017 - undetermined]
+\end{itemize}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth, keepaspectratio]{task_and_schedule/diagrams/Tasks1.png}
+\end{figure}
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth, keepaspectratio]{task_and_schedule/diagrams/Tasks2.png}
+\end{figure}
